// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxUI renders correctly in checked state 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="wrapper"
>
  <Image
    isChecked={true}
    source={
      Object {
        "testUri": "../../../src/assets/images/checkbox/checkbox_active.png",
      }
    }
    style={
      Array [
        Object {
          "marginRight": 16,
        },
      ]
    }
  />
  test
</TouchableOpacity>
`;

exports[`CheckBoxUI renders correctly in unchecked state 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="wrapper"
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/images/checkbox/checkbox_inactive.png",
      }
    }
    style={
      Array [
        Object {
          "marginRight": 16,
        },
      ]
    }
  />
  test
</TouchableOpacity>
`;
